<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        style="@style/loginCard"
        app:cardCornerRadius="@dimen/loginCardRadius"
        android:elevation="5dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:layout_marginBottom="@dimen/loginViewsMargin"
        android:background="@color/whiteCardColor">

    <ProgressBar
            android:id="@+id/progressRegister"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
    />

    <LinearLayout
            style="@style/linearParent"
            android:layout_gravity="center"
            android:padding="@dimen/loginViewsMargin">

        <TextView
                style="@style/headerTextPrimary"
                android:text="@string/register"
                android:layout_marginTop="@dimen/loginViewsMargin"/>

        <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                    android:id="@+id/nameRegister"
                    style="@style/modifiedEditText"
                    android:inputType="text"
                    android:maxLines="1"
                    android:hint="Name"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                    android:id="@+id/emailRegister"
                    style="@style/modifiedEditText"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:hint="@string/login_email_hint"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/signup_text_margin_top"
                app:passwordToggleEnabled="true">
            <EditText
                    android:id="@+id/passwordRegister"
                    style="@style/modifiedEditText"
                    android:hint="@string/login_password_hint"
                    android:maxLines="1"
                    android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/signup_text_margin_top"
                app:passwordToggleEnabled="true">
            <EditText
                    android:id="@+id/passwordRegisterConfirm"
                    style="@style/modifiedEditText"
                    android:hint="@string/login_password_confirm_hint"
                    android:maxLines="1"
                    android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/registerBtn"
                style="@style/loginButton"
                android:layout_gravity="center"
                android:text="Register"/>

        <TextView
                style="@style/parent"
                android:id="@+id/alreadyCreated"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/primaryTextColor"
                android:text="@string/signup_login_hint"
                android:layout_marginTop="@dimen/loginViewsMargin"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>
