<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        style="@style/loginCard"
        app:cardCornerRadius="@dimen/loginCardRadius"
        android:elevation="5dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:layout_marginBottom="@dimen/loginViewsMargin"
        android:background="@color/whiteCardColor">

    <ProgressBar
            android:id="@+id/progressSetUp"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
    />

    <LinearLayout
            style="@style/linearParent"
            android:layout_gravity="center"
            android:padding="@dimen/loginViewsMargin">

        <TextView
                style="@style/headerTextPrimary"
                android:text="Set Up"
                android:layout_marginTop="@dimen/loginViewsMargin"/>

        <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:elevation="12dp"
                android:id="@+id/view2"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                app:cardCornerRadius="40dp">
            <ImageView
                    android:layout_height="80dp"
                    android:layout_width="match_parent"
                    android:id="@+id/profilePicture"
                    android:src="@drawable/ic_account_circle_black_24dp"
                    android:scaleType="centerCrop"/>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                    android:id="@+id/nameSetUp"
                    style="@style/modifiedEditText"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:hint="@string/NameSetUp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/signup_text_margin_top">
            <AutoCompleteTextView
                    android:id="@+id/countrySetUp"
                    style="@style/modifiedEditText"
                    android:inputType="text"
                    android:maxLines="1"
                    android:hint="@string/countrySetUp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/signup_text_margin_top">
            <AutoCompleteTextView
                    android:id="@+id/collegesSetUp"
                    style="@style/modifiedEditText"
                    android:inputType="text"
                    android:maxLines="1"
                    android:hint="@string/collegeSetUp"/>
        </com.google.android.material.textfield.TextInputLayout>


        <Button
                android:id="@+id/setUpContinue"
                style="@style/loginButton"
                android:layout_gravity="center"
                android:text="@string/continueSetUp"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>
