<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".onboarding.IntroActivity"
              android:background="@drawable/backgroundonboarding">

    <androidx.viewpager.widget.ViewPager
            android:id="@+id/screen_viewpager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/tab_indicator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:background="@color/colorPrimary"
            android:drawableEnd="@drawable/ic_arrow_forward_black_24dp"
            android:drawableTint="@color/gradient_start_color"
            android:text="@string/next_btn"
            android:textColor="@color/gradient_start_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <Button
            android:id="@+id/btn_prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="16dp"
            android:background="@color/colorPrimary"
            android:drawableStart="@drawable/ic_arrow_back_black_24dp"
            android:drawableTint="@color/gradient_start_color"
            android:text="@string/prev_btn"
            android:textColor="@color/gradient_start_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/btn_prev"
            app:layout_constraintRight_toLeftOf="@id/btn_next"
            app:tabBackground="@drawable/indicator_selector"/>

    <Button
            android:id="@+id/btn_get_started_login"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="88dp"
            android:background="@drawable/btn_gradient_style"
            android:repeatCount="infinite"
            android:text="@string/login_btn"
            android:textColor="@color/colorAccent"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.152"
            app:layout_constraintStart_toStartOf="parent" />

    <Button
            android:id="@+id/btn_get_started_register"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="88dp"
            android:background="@drawable/btn_gradient_style"
            android:repeatCount="infinite"
            android:text="@string/register_btn"
            android:textColor="#fff"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.848"
            app:layout_constraintStart_toStartOf="parent" />

    <TextView
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#2d2d2d"
            android:id="@+id/tv_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/skip_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>