<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="20sp"
        android:layout_height="match_parent"
        tools:context="com.slife.slife.BottomNavigation.Profile.ProfileFragment">

    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_margin="20sp"
            android:layout_height="match_parent"
            tools:context="com.slife.slife.BottomNavigation.Profile.ProfileFragment">

        <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginBottom="10dp"
                android:elevation="12dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                app:cardCornerRadius="40dp">
            <ImageView
                    android:layout_height="80dp"
                    android:layout_width="match_parent"
                    android:id="@+id/profilePictureFragment"
                    android:src="@drawable/ic_account_circle_black_24dp"
                    android:scaleType="centerCrop"/>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                    android:id="@+id/nameFragment"
                    style="@style/modifiedEditText"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:hint="@string/NameSetUp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/signup_text_margin_top">
            <AutoCompleteTextView
                    android:id="@+id/countryFragment"
                    style="@style/modifiedEditText"
                    android:inputType="text"
                    android:maxLines="1"
                    android:hint="@string/countrySetUp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/signup_text_margin_top">
            <AutoCompleteTextView
                    android:id="@+id/collegeFragment"
                    style="@style/modifiedEditText"
                    android:inputType="text"
                    android:maxLines="1"
                    android:hint="@string/collegeSetUp"/>
        </com.google.android.material.textfield.TextInputLayout>


        <Button
                android:text="Update"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/updateBtn"/>

        <Button
                android:text="Logout"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/logoutBtn"/>


    </LinearLayout>

    <ProgressBar
            android:layout_width="wrap_content"
            android:id="@+id/profileFragmentPb"
            android:visibility="gone"
            android:layout_gravity="center"
            android:layout_height="wrap_content"/>

</FrameLayout>